@@ -1,7 +1,7 @@
 use strict;
 use warnings;
 use Cwd qw/getcwd abs_path/;
-use Test::More tests => 5;
+use Test::More tests => 6;
 use Test::Exception;
 use Test::Warn;
 use File::Temp qw/ tempdir /;
@@ -198,5 +198,17 @@ subtest 'Argument input files' => sub {
     is($check->_is_rna_alignment, 1, 'bam for id run 6 lane 6 tag 6 from STAR aligner is RNA alignment');
 
 };
+
+subtest 'Role methods' => sub {
+    plan tests => 6;
+    my ($r, $om_value);
+    use_ok('npg_qc::autoqc::role::rna_seqc');
+    use_ok ('npg_qc::autoqc::results::rna_seqc');
+    lives_ok {$r = npg_qc::autoqc::results::rna_seqc->load('t/data/autoqc/rna_seqc/data/18407_1#7.rna_seqc.json');} 'load serialised valid result';
+    lives_ok {$om_value = $r->other_metrics();} 'extract other metrics';
+    is_deeply($r->transcripts_detected(), $om_value->{'Transcripts Detected'}, 'value extracted using role method');
+    is_deeply($r->intronic_rate(), $om_value->{'Intronic Rate'}, 'value extracted using role method');
+};
+
 
 1;
