@@ -3,6 +3,8 @@ LIST OF CHANGES FOR NPG-QC PACKAGE
  - remove run_timeline component on the Illumina QC loader
  - stop generating DBIx class for run_timeline db table
  - remove unused methods of the run_graph Clearpress model
+ - add new role for rna_seqc to implement ability to extract values from
+   column other_metrics to be stored in ml warehouse database
 
 release 64.5
  - qc outcomes model: code generalisation to simplify addition of
